--- a/3_Add Variables.ipynb
+++ b/3_Add Variables.ipynb
@@ -227,6 +227,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Covid-19 restriction data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -1007,6 +1015,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge Covid-19 restriction data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -1402,7 +1418,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Merge data_feiertag and covid_data\n",
     "data_feiertag_ferien_google_covid = pd.merge(data_feiertag_ferien_google, covid_restrictions, on='Zeitstempel', how='left')"
    ]
