--- a/4_Data Modelling.ipynb
+++ b/4_Data Modelling.ipynb
@@ -20,9 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read enriched dataset\n",
-    "data_enriched = pd.read_csv(\"data_enriched.csv\", parse_dates=['Zeitstempel'])\n",
-    "\n",
-    "extra_cols = ['Feiertag_bool', 'Ferien_bool', 'GTrends_Mocafe_PrevWeek', 'Covid restrictions', 'Flu season']"
+    "data_enriched = pd.read_csv(\"data_enriched.csv\", parse_dates=['Zeitstempel'])"
    ]
   },
   {
